Verification Panels: Overflow bug fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -584,7 +584,15 @@ section.gpgservices header { background: url(../images/section/gpgservices-new-l
 
 .modal.signature-verification-page .intro p, .modal.signature-verification-page .switcher p { padding: 0px; margin: 0px; padding-bottom: 12px; font-size: 16px; line-height: 1.3; }
 .modal.signature-verification-page div p:first-child { color: #656565; }
-.modal.signature-verification-page .switcher { overflow-y: hidden; }
+.modal.signature-verification-page .switcher {
+	width: 590px;
+	overflow-y: hidden;
+}
+.modal.signature-verification-page.hash-verification .switcher {
+	width: 318px;
+}
+
+
 
 .modal#contact-page { font-family: "futura-pt"; font-size: 15px; color: #8c8c8c; 
 	width: 640px; padding: 10px;
